fix : recipe page - footer in the middle, img not showing in big screen

--- a/src/app/recipes/[recipeKey]/Recipe.module.scss
+++ b/src/app/recipes/[recipeKey]/Recipe.module.scss
@@ -23,6 +23,7 @@
   position: relative;
   width: 100%;
   height: 100%;
+  min-height: 500px;
   margin: 0 3rem;
 
   @media #{$laptop} {
