--- a/src/app/recipes/style.module.scss
+++ b/src/app/recipes/style.module.scss
@@ -3,5 +3,5 @@
 .layout-container {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  flex: 1;
 }
